corrections to get variable updates to be received and displayed properly